@@ -1,3 +1,6 @@
+2017-01-12  Kirit Saelensminde  <kirit@felspar.com>
+ Removed the old `parser_lock` which is no longer needed.
+
 2017-01-07  Kirit Saelensminde  <kirit@felspar.com>
  Allow access to the data buffer within the `utf8_view`.
 
